fixed missing reference & beautify Formigli bibItem

--- a/Bibliografia.tex
+++ b/Bibliografia.tex
@@ -9,7 +9,7 @@
 \url{https://it.wikipedia.org/wiki/Scandalo_Facebook-Cambridge_Analytica}
 
 \bibitem{formigli}
-\url{https://www.la7.it/piazzapulita/video/la-mia-casa-postata-online-alcune-considerazioni-leditoriale-di-corrado-formigli-12-12-2019-298369}
+\href{https://www.la7.it/piazzapulita/video/la-mia-casa-postata-online-alcune-considerazioni-leditoriale-di-corrado-formigli-12-12-2019-298369}{https://www.la7.it/piazzapulita/video/la-mia-casa-postata-online-alcune-considerazioni-leditoriale-di-corrado-formigli-12-12-2019-298369}
 
 \bibitem{MalandrinoScarano}
 Delfina Malandrino e Vittorio Scarano\newline
