--- a/Capitolo1.tex
+++ b/Capitolo1.tex
@@ -1,5 +1,5 @@
 \section{Contesto}
-Da una decina d'anni a questa parte gli OSN sono sempre più presenti nella vita di milioni di persone; siamo arrivati al punto che una singola persona possiede anche più tipi di social network (o addirittura account multipli) e su ognuno di questi, spesso sulla base del tipo di comunicazione che permette, pubblica contenuti diversi. I social network incoraggiano sostanzialmente gli utenti a condividere più o meno la loro privacy per migliorare la loro presenza nel mondo virtuale. Questo fa si che su queste piattaforme viaggi una enorme mole di informazioni.
+Da una decina d'anni a questa parte gli OSN sono sempre più presenti nella vita di milioni di persone; siamo arrivati al punto che una singola persona possiede anche più tipi di social network (o addirittura account multipli) e su ognuno di questi, spesso sulla base del tipo di comunicazione che permette, pubblica contenuti diversi. Alla base dei social network c'è il concetto di \quotes{\textit{condivisione}} fino a quando un utente si limita a condividere su queste piattaforme contenuti propri ed innocui questo non causa alcun tipo di complicazione, anzi, è un modo per comunicare con il resto del mondo. I problemi sorgono quando sui social vengono condivisi contenuti che possono violare la privacy propria o altrui. 
 
 In particolare, alcuni studi dimostrano che gli utenti a volte rivelano troppe informazioni o divulgano involontariamente messaggi che minano la loro privacy, specialmente quando sono negligenti, emotivi o inconsapevoli dei rischi~\cite{looseTweets, studyFb, readMyTwitter}.
 Per la maggior parte degli utenti, i loro post sono pensati solo per essere condivisi con amici / follower, ma il pubblico degli OSN è significativamente più grande delle aspettative degli utenti, tra cui inserzionisti, recruiter, robot dei motori di ricerca, ecc.
@@ -73,6 +73,7 @@ Attualmente i limiti di Knoxly sono quelli intrinsechi ad una analisi lessicale.
 Knoxly mira a proteggere gli utenti del Web dalla diffusione accidentale di qualsiasi contenuto inappropriato, in particolare le informazioni private o sensibili su se stessi. Si considera principalmente il rischio di una diffusione inappropriata a due tipo di pubblico: (1) follower o amici, che ricevono aggiornamenti dei post dell'utente; (2) staker esterni, che sbirciano nei post dei social network di un utente target. È probabile che entrambi conoscano l'identità offline dell'utente. Knoxly non impedisce all'utente di pubblicare i contenuti(sensibili) nè impedisce al destinatario di visualizzare i contenuti, fornendo privacy awareness. L'idea di Knoxly parte dal presupposto che dei tracciatori possono esplorare l'OSN attraverso l'interfaccia utente o raccogliere dati utilizzando un crawler automatizzato tramite l'API dell'OSN di riferimento. Infine, non considera la retrazione/cancellazione dei post precedenti, nè li analizza.
 
 \section{Obiettivi del lavoro}
+\label{sec:obiettiviCap1}
 Questo lavoro si prefigge l'obiettivo di aggiungere a Knoxly un modulo intelligente in grado di poter riconoscere un dato sensibile in un testo scritto in linguaggio naturale senza affidarsi a meccanismi keyword-based, di segnalare all'utente la presenza di questo dato e di dare la possibilità all'utente di personalizzare il livello delle segnalazioni in modo tale che esso possa \quotes{imparare} a riconoscere quali sono i dati sensibili secondo lo specifico l'utente che sta utilizzando il plugin.
 
 \subsection{I dati sensibili}
@@ -93,3 +94,17 @@ Abbiamo scelto di utilizzare un sottoinsieme di temi di partenza per dare una co
     \item viaggi
 \end{enumerate}
 Questi temi sono stati scelti per due motivi: (a) molti di questi temi fanno parte della normativa GDPR quindi è una legge a dirci che i dati appartenenti a quelle categorie sono sensibili e (b) molti dei temi che verranno trattati sono già stati utilizzati in vari riguardanti la privacy detection e il privacy leakage~\cite{looseTweets, MalandrinoScarano, dontTweetThis}.
+
+\section{Struttura della tesi}
+\label{sec:res_ottenuti}
+Una volta descritti gli obiettivi che si pone questo lavoro di tesi (Sez.~\ref{sec:obiettiviCap1}), nei successivi capitoli verrà descritto in modo dettagliato il percorso e le scelte fatte per raggiungere tali obiettivi.
+
+Nel capitolo \ref{ch:cap2} viene descritto il background tecnologico e teorico delle varie IA che compongono il modulo semantico di Knoxly.
+
+Prima di poter iniziare la sperimentazione e la realizzazione del modulo semantico di Knoxly nel capitolo \ref{ch:cap3} vengono descritti i lavori principali presenti in letteratura riguardanti il tema della privacy awareness e del privacy leakage.
+
+Dopo aver visto i principali lavori presenti in letteratura riguardo il tema della privacy awareness e del privacy leakege è stato possibile capire quali topic sono soggetti al leakage. Oltre a questo è stato possibile capire il modus operandi da applicare per la realizzazione del modulo semantico. Sulla base di questi studi nel capitolo \ref{ch:cap4} si descrive in maniera dettagliata tutto il processo di sviluppo del modulo semantico partendo dalla collezione dei dati utilizzanti (Sez. \ref{datacollection}) fino ad arrivare alla realizzazione dei 3 classificatori che compongono il modulo semantico. I classificatori realizzati sono il Topic classifier (Sez. \ref{sec:topicclass} ovvero un classificatore in grado di riconoscere il topic a cui fa riferimento una frase, il Sensitivenss classifier (Sez. \ref{sec:sensclass}) ovvero un classificatore un grado di dire se un contenuto è sensibile o meno e il Customized Sensitiveness classifier (Sez. \ref{sec:pres_sens_class}), un classficatore che in base ai feedback forniti dall'utente riuscirà a riconoscere se una frase risulta essere sensibile o meno in base alla percezione della privacy dell utente.
+
+Una volta realizzato il modulo semantico nel capitolo \ref{ch:cap5} viene descritto come questo sia stato integrato in Knoxly e nel capitolo \ref{ch:cap6} viene effettuato uno studio quantitativo e qualitativo sulle performance di Knoxly. Nello studio quantitativo sono state misurate le perfomance sia del client che del server di Knxoly per vedere quanta RAM, tempo e CPU utilizzasse il plug-in. Nello studio qualitativo invece sono state misurate le performance di Knoxly per valutare quanto le previsione fatte dai classificatori siano corrette.
+
+Infine nel capitolo \ref{ch:cap7} viene fatta una riflessione sui risultati ottenuti da questo lavoro e su quali possano essere i possibili sviluppi futuri del progetto Knoxly.
