--- a/Capitolo4.tex
+++ b/Capitolo4.tex
@@ -139,7 +139,7 @@ Infine, è stata realizzata una matrice che mette insieme le frasi selezionate p
 
 \begin{figure}[h!t]
     \centering
-    \includegraphics{Figure/simMatr/fly.pdf}
+    \includegraphics[width=15cm]{Figure/simMatr/fly.pdf}
     \caption{matrici di similarità delle frasi appartenenti al topic travel. Il campione usato per travel è quello che riporta le similarità più basse rispetto a tutti gli altri topic, infatti, il valore di similarità più basso viene registrato dalle coppie [f4, f0] e [f4, f1] che hanno un valore di similarità pari a 0.019. In generale in questo campione la similarità è molto bassa arrivando ad un massimo di 0.51.}
     \label{fig:mtrsim_t}
 \end{figure}
@@ -313,7 +313,7 @@ In questa fase ds200.csv è stato etichettato secondo le regole delineate in~\ci
 \begin{figure}
     \centering
     \includegraphics[scale=0.4]{Figure/sensTbl.png}
-    \caption{Tabella delle sensibilità utilizzata da Rumbold et al.~\cite{spectrum}}
+    \caption{Tabella delle sensibilità utilizzata da Rumbold et al.~\cite{dataSpectrum}}
     \label{fig:sensRumboldd}
 \end{figure}
 \FloatBarrier
