--- a/Capitolo6.tex
+++ b/Capitolo6.tex
@@ -1,4 +1,5 @@
 \chapter{Evaluation}
+\label{ch:cap6}
 In questo capitolo verrà spiegata come è stata effettuata la valutazione delle perfomance del plug-in. Le perfomance sono state valutate in termini di \textbf{efficacia}, ovvero, quanto siano accurate le previsioni effettuate, ed \textbf{efficienza}, ovvero, quanto tempo, spazio e CPU utilizza il plug-in.   
 
 \section{Metodologia utilizzata}
