--- a/Capitolo7.tex
+++ b/Capitolo7.tex
@@ -1,4 +1,5 @@
 \chapter{Conclusioni e sviluppi futuri}
+\label{ch:cap7}
 Da quando 10-15 anni fa gli Online Social Network hanno iniziato a far parte delle vite di ciascun individuo, molti più dati vengono condivisi in rete. Tantissime persone divulgano spesso inconsapevolmente dati personali e sensibili che minano la privacy propria e degli altri. Nasce quindi l'esigenza di proteggere le persone non solo, come già avviene~\cite{}, da tracker in rete, ma anche da loro stessi, muovendosi verso un concetto di privacy un po' diverso, esteso, che può essere riassunto come segue: \textit{ \quotes{privacy as having the ability to control the dissemination of sensitive information}}.
 
 Per questo motivo sorge la necessità di avere strumenti adatti a fornire consapevolezza agli utenti, avvertirli prima della divulgazione di informazioni sensibili o personali, fornendo quindi un meccanismo di difesa basato sul \textit{nudge}. Knoxly, è un tool per Google Chrome che, utilizzando meccanismi lessicali per individuare dati sensibili e personali in messaggi di testo scritti in linguaggio naturale, fornisce agli utenti consapevolezza rispetto alla privacy. Tale tool nella sua prima versione mostra delle limitazioni dovute proprio alla rigidità dei meccanismi basati sui lessemi. 
