--- a/indice.tex
+++ b/indice.tex
@@ -137,14 +137,18 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Background}
+\label{ch:cap2}
 \input{Capitolo2.tex}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Related Work}
+\label{ch:cap3}
 \input{Capitolo3.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Metodologia}
+\label{ch:cap4}
 \input{Capitolo4.tex}
 
 
