edited bibitem identation

--- a/Bibliografia.tex
+++ b/Bibliografia.tex
@@ -70,38 +70,38 @@ Douglas Aberdeen, Ondrej Pacovsky  and Andrew Slater\newline
 
 \bibitem{ds_pol}
 Ed King.
-\textit{Election Day Tweets}
+\textit{Election Day Tweets}\newline
 \url{https://www.kaggle.com/kinguistics/election-day-tweets?select=election_day_tweets.csv}
 2020
 
 \bibitem{ds_health1}
 Tara Boyle.
-\textit{Medical Transcripts}
+\textit{Medical Transcripts}\newline  
 \url{https://www.kaggle.com/tboyle10/medicaltranscriptions}
 2018
 
 \bibitem{ds_health2}
 Paul Mooney.
-\textit{Medical Speech, Transcription, and Intent}
-\url{https://www.kaggle.com/paultimothymooney/medical-speech-transcription-and-intent}
+\textit{Medical Speech, Transcription, and Intent}\newline
+\url{https://www.kaggle.com/paultimothymooney/medical-speech-transcription-and-intent}\newline
 2019
 
 \bibitem{ds_job}
 Amir
-\textit{Amazon Job skills}
-\url{https://www.kaggle.com/atahmasb/amazon-job-skills}
+\textit{Amazon Job skills}\newline
+\url{https://www.kaggle.com/atahmasb/amazon-job-skills}\newline
 2018
 
 \bibitem{ds_travel}
 Figure Eight
-\textit{Twitter US Airline Sentiment}
-\url{https://www.kaggle.com/crowdflower/twitter-airline-sentiment}
+\textit{Twitter US Airline Sentiment}\newline
+\url{https://www.kaggle.com/crowdflower/twitter-airline-sentiment}\newline
 2019
 
 \bibitem{ds_general}
 Rounak Banik
-\textit{The Movies Dataset}
-\url{https://www.kaggle.com/rounakbanik/the-movies-dataset}
+\textit{The Movies Dataset}\newline
+\url{https://www.kaggle.com/rounakbanik/the-movies-dataset}\newline
 2017
 
 \bibitem{PAalgo}
