--- a/indice.tex
+++ b/indice.tex
@@ -110,6 +110,10 @@
 \end{center}
 \end{titlepage}
 
+%%%%%%%%Cap. ringraziamenti%%%%%%%%
+\chapter*{Ringraziamenti}
+\input{Ringraziamenti.tex}
+
 \setcounter{page}{1} 		
 \pagenumbering{roman} 
 
@@ -117,7 +121,6 @@
 	
 \tableofcontents
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 
 
 
